--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -1,49 +1,4 @@
-<table cellspacing="2" border="1">
-<tr id="header">
-	<th>Tid</th>
-	<th>Mandag</th>
-	<th>Tirsdag</th>
-	<th>Onsdag</th>
-	<th>Torsdag</th>
-	<th>Fredag</th>
-</tr>
-<tr>
-	<td>08:00-10:00</td>
-	<td><%= "#{@all_courses["Mandag"]["08.00"][:name]} - Lokale: #{@all_courses["Mandag"]["08.00"][:room]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["08.00"] %></td>
-	<td><%= "#{@all_courses["Tirsdag"]["08.00"][:name]} - Lokale: #{@all_courses["Tirsdag"]["08.00"][:room]}".html_safe if @all_courses["Tirsdag"] && @all_courses["Tirsdag"]["08.00"] %></td>
-	<td><%= "#{@all_courses["Onsdag"]["08.00"][:name]} - Lokale: #{@all_courses["Onsdag"]["08.00"][:room]}".html_safe if @all_courses["Onsdag"] && @all_courses["Onsdag"]["08.00"] %></td>
-	<td><%= "#{@all_courses["Torsdag"]["08.00"][:name]} - Lokale: #{@all_courses["Torsdag"]["08.00"][:room]}".html_safe if @all_courses["Torsdag"] && @all_courses["Torsdag"]["08.00"] %></td>
-	<td><%= "#{@all_courses["Fredag"]["08.00"][:name]} - Lokale: #{@all_courses["Fredag"]["08.00"][:room]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["08.00"] %></td>
-</tr>
-<tr>
-	<td>10:00-12:00</td>
-	<td><%= "#{@all_courses["Mandag"]["10.00"][:name]} - Lokale: #{@all_courses["Mandag"]["10.00"][:room]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["10.00"] %></td>
-	<td><%= "#{@all_courses["Tirsdag"]["10.00"][:name]} - Lokale: #{@all_courses["Tirsdag"]["10.00"][:room]}".html_safe if @all_courses["Tirsdag"] && @all_courses["Tirsdag"]["10.00"] %></td>
-	<td><%= "#{@all_courses["Onsdag"]["10.00"][:name]} - Lokale: #{@all_courses["Onsdag"]["10.00"][:room]}".html_safe if @all_courses["Onsdag"] && @all_courses["Onsdag"]["10.00"] %></td>
-	<td><%= "#{@all_courses["Torsdag"]["10.00"][:name]} - Lokale: #{@all_courses["Torsdag"]["10.00"][:room]}".html_safe if @all_courses["Torsdag"] && @all_courses["Torsdag"]["10.00"] %></td>
-	<td><%= "#{@all_courses["Fredag"]["10.00"][:name]} - Lokale: #{@all_courses["Fredag"]["10.00"][:room]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["10.00"] %></td>
-</tr>
-<tr>
-	<td>12:00-14:00</td>
-	<td><%= "#{@all_courses["Mandag"]["12.00"][:name]} - Lokale: #{@all_courses["Mandag"]["12.00"][:room]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["12.00"] %></td>
-	<td><%= "#{@all_courses["Tirsdag"]["12.00"][:name]} - Lokale: #{@all_courses["Tirsdag"]["12.00"][:room]}".html_safe if @all_courses["Tirsdag"] && @all_courses["Tirsdag"]["12.00"] %></td>
-	<td><%= "#{@all_courses["Onsdag"]["12.00"][:name]} - Lokale: #{@all_courses["Onsdag"]["12.00"][:room]}".html_safe if @all_courses["Onsdag"] && @all_courses["Onsdag"]["12.00"] %></td>
-	<td><%= "#{@all_courses["Torsdag"]["12.00"][:name]} - Lokale: #{@all_courses["Torsdag"]["12.00"][:room]}".html_safe if @all_courses["Torsdag"] && @all_courses["Torsdag"]["12.00"] %></td>
-	<td><%= "#{@all_courses["Fredag"]["12.00"][:name]} - Lokale: #{@all_courses["Fredag"]["12.00"][:room]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["12.00"] %></td>
-</tr>
-<tr>
-	<td>14:00-16:00</td>
-	<td><%= "#{@all_courses["Mandag"]["14.00"][:name]} - Lokale: #{@all_courses["Mandag"]["14.00"][:room]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["14.00"] %></td>
-	<td><%= "#{@all_courses["Tirsdag"]["14.00"][:name]} - Lokale: #{@all_courses["Tirsdag"]["14.00"][:room]}".html_safe if @all_courses["Tirsdag"] && @all_courses["Tirsdag"]["14.00"] %></td>
-	<td><%= "#{@all_courses["Onsdag"]["14.00"][:name]} - Lokale: #{@all_courses["Onsdag"]["14.00"][:room]}".html_safe if @all_courses["Onsdag"] && @all_courses["Onsdag"]["14.00"] %></td>
-	<td><%= "#{@all_courses["Torsdag"]["14.00"][:name]} - Lokale: #{@all_courses["Torsdag"]["14.00"][:room]}".html_safe if @all_courses["Torsdag"] && @all_courses["Torsdag"]["14.00"] %></td>
-	<td><%= "#{@all_courses["Fredag"]["14.00"][:name]} - Lokale: #{@all_courses["Fredag"]["14.00"][:room]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["14.00"] %></td>
-</tr>
-<tr>
-	<td>16:00-18:00</td>
-	<td><%= "#{@all_courses["Mandag"]["16.00"][:name]} - Lokale: #{@all_courses["Mandag"]["16.00"][:room]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["16.00"] %></td>
-	<td><%= "#{@all_courses["Tirsdag"]["16.00"][:name]} - Lokale: #{@all_courses["Tirsdag"]["16.00"][:room]}".html_safe if @all_courses["Tirsdag"] && @all_courses["Tirsdag"]["16.00"] %></td>
-	<td><%= "#{@all_courses["Onsdag"]["16.00"][:name]} - Lokale: #{@all_courses["Onsdag"]["16.00"][:room]}".html_safe if @all_courses["Onsdag"] && @all_courses["Onsdag"]["16.00"] %></td>
-	<td><%= "#{@all_courses["Torsdag"]["16.00"][:name]} - Lokale: #{@all_courses["Torsdag"]["16.00"][:room]}".html_safe if @all_courses["Torsdag"] && @all_courses["Torsdag"]["16.00"] %></td>
-	<td><%= "#{@all_courses["Fredag"]["16.00"][:name]} - Lokale: #{@all_courses["Fredag"]["16.00"][:room]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["16.00"] %></td>
-</tr>
+<% form_tag(:action => "show") do %>
+  <%= text_field(:itu_email) %>
+	<%= password_field(:itu_password) %>
+<% end -%>
