--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -1,4 +1,6 @@
-<% form_tag(:action => "show") do %>
-  <%= text_field(:itu_email) %>
-	<%= password_field(:itu_password) %>
+<h1>Indtast dit itu-login</h1>
+<%= form_tag(:action => "show") do %>
+  <%= text_field_tag(:itu_email) %>
+	<%= password_field_tag(:itu_password) %>
+	<%= submit_tag("Vis skema")%>
 <% end -%>
