heey mr robinson

--- a/app/views/timetables/show.html.erb
+++ b/app/views/timetables/show.html.erb
@@ -1,3 +1,5 @@
+<h1>Skema for <%= @timetable.itu_email %></h1>
+<p><%= link_to "Opdater skema", update_timetable_path(@timetable) %>
 <table cellspacing="2" border="1">
 <tr id="header">
 	<th>Tid</th>
