--- a/app/views/timetables/show.html.erb
+++ b/app/views/timetables/show.html.erb
@@ -3,7 +3,7 @@
 <table cellspacing="2" border="1">
 <tr id="header">
 	<th class="time_cell">Tid</th>
-	<th>Fredag</th>
+	<th>Mandag</th>
 	<th>Tirsdag</th>
 	<th>Onsdag</th>
 	<th>Torsdag</th>
@@ -13,16 +13,16 @@
 	<td class="time_cell">08:00-10:00</td>
 	<td>
 		<div class="course_title">
-			<%= "#{@all_courses["Fredag"]["08.00"][:name]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["08.00"] %>
+			<%= "#{@all_courses["Mandag"]["08.00"][:name]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["08.00"] %>
 		</div>
 		<div class="course_type">
-			<%= "#{@all_courses["Fredag"]["08.00"][:type]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["08.00"] %>
+			<%= "#{@all_courses["Mandag"]["08.00"][:type]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["08.00"] %>
 		</div>
 		<div class="label">
-			<%= "i".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["08.00"] %>
+			<%= "i".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["08.00"] %>
 		</div>
 		<div class="course_room">
-			<%= "#{@all_courses["Fredag"]["08.00"][:room]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["08.00"] %>
+			<%= "#{@all_courses["Mandag"]["08.00"][:room]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["08.00"] %>
 		</div>
 	</td>
 		
@@ -91,16 +91,16 @@
 	<td class="time_cell">10:00-12:00</td>
 	<td>
 		<div class="course_title">
-			<%= "#{@all_courses["Fredag"]["10.00"][:name]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["10.00"] %>
+			<%= "#{@all_courses["Mandag"]["10.00"][:name]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["10.00"] %>
 		</div>
 		<div class="course_type">
-			<%= "#{@all_courses["Fredag"]["10.00"][:type]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["10.00"] %>
+			<%= "#{@all_courses["Mandag"]["10.00"][:type]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["10.00"] %>
 		</div>
 		<div class="label">
-			<%= "i".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["10.00"] %>
+			<%= "i".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["10.00"] %>
 		</div>
 		<div class="course_room">
-			<%= "#{@all_courses["Fredag"]["10.00"][:room]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["10.00"] %>
+			<%= "#{@all_courses["Mandag"]["10.00"][:room]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["10.00"] %>
 		</div>
 	</td>
 	<td>
@@ -164,16 +164,16 @@
 	<td class="time_cell">12:00-14:00</td>
 	<td>
 		<div class="course_title">
-			<%= "#{@all_courses["Fredag"]["12.00"][:name]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["12.00"] %>
+			<%= "#{@all_courses["Mandag"]["12.00"][:name]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["12.00"] %>
 		</div>
 		<div class="course_type">
-			<%= "#{@all_courses["Fredag"]["12.00"][:type]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["12.00"] %>
+			<%= "#{@all_courses["Mandag"]["12.00"][:type]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["12.00"] %>
 		</div>
 		<div class="label">
-			<%= "i".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["12.00"] %>
+			<%= "i".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["12.00"] %>
 		</div>
 		<div class="course_room">
-			<%= "#{@all_courses["Fredag"]["12.00"][:room]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["12.00"] %>
+			<%= "#{@all_courses["Mandag"]["12.00"][:room]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["12.00"] %>
 		</div>
 	</td>
 	<td>
@@ -237,16 +237,16 @@
 	<td class="time_cell">14:00-16:00</td>
 	<td>
 		<div class="course_title">
-			<%= "#{@all_courses["Fredag"]["14.00"][:name]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["14.00"] %>
+			<%= "#{@all_courses["Mandag"]["14.00"][:name]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["14.00"] %>
 		</div>
 		<div class="course_type">
-			<%= "#{@all_courses["Fredag"]["14.00"][:type]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["14.00"] %>
+			<%= "#{@all_courses["Mandag"]["14.00"][:type]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["14.00"] %>
 		</div>
 		<div class="label">
-			<%= "i".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["14.00"] %>
+			<%= "i".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["14.00"] %>
 		</div>
 		<div class="course_room">
-			<%= "#{@all_courses["Fredag"]["14.00"][:room]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["14.00"] %>
+			<%= "#{@all_courses["Mandag"]["14.00"][:room]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["14.00"] %>
 		</div>
 	</td>
 	<td>
@@ -310,16 +310,16 @@
 	<td class="time_cell">16:00-18:00</td>
 	<td>
 		<div class="course_title">
-			<%= "#{@all_courses["Fredag"]["16.00"][:name]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["16.00"] %>
+			<%= "#{@all_courses["Mandag"]["16.00"][:name]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["16.00"] %>
 		</div>
 		<div class="course_type">
-			<%= "#{@all_courses["Fredag"]["16.00"][:type]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["16.00"] %>
+			<%= "#{@all_courses["Mandag"]["16.00"][:type]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["16.00"] %>
 		</div>
 		<div class="label">
-			<%= "i".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["16.00"] %>
+			<%= "i".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["16.00"] %>
 		</div>
 		<div class="course_room">
-			<%= "#{@all_courses["Fredag"]["16.00"][:room]}".html_safe if @all_courses["Fredag"] && @all_courses["Fredag"]["16.00"] %>
+			<%= "#{@all_courses["Mandag"]["16.00"][:room]}".html_safe if @all_courses["Mandag"] && @all_courses["Mandag"]["16.00"] %>
 		</div>
 	</td>
 	<td>
