Redirecter dig automatisk til /timetable/show/:itu_email når du logger ind, og hvis der ikke er et cached skema og du ikke indtaster password så redirecter den til forsiden igen istedet for at vise tomt skema

--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Indtast dit itu-login</h1>
-<%= form_tag(:action => "show") do %>
+<%= form_tag(:action => "fetch_timetable") do %>
   <%= text_field_tag(:itu_email) %>
 	<%= password_field_tag(:itu_password) %>
 	<%= submit_tag("Vis skema")%>
